--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         In the near future, I see myself working in one of these fields, particularly in companies related to energy generation and distribution, such as Colbún, Enel, AES Chile, Engie, or an innovative startup focused on renewable energy.</p>
 
         <p>Beyond engineering, I consider myself a proactive person, and sports are an essential part of my lifestyle.  
-        I love spending time in nature, especially trekking across Chile, where I can combine my passion for exploration with one of my favorite hobbies, landscape and astrophotography.</p>
+        I love spending time in nature, especially trekking across Chile, where I can combine my passion for exploration with one of my favorite hobbies, landscape and astrophotography...</p>
 
         <div class="category-title">Data Analysis / Coding</div>
         <table class="skills-table">
