--- a/index.html
+++ b/index.html
@@ -4,155 +4,100 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicolás Torres - Personal Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            padding: 20px;
             background-color: #f4f4f4;
         }
-
         .container {
-            max-width: 700px;
+            max-width: 800px;
             background: white;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            font-family: 'Georgia', serif;
-            color: #2c3e50;
-            text-align: center;
-        }
-
-        h2 {
-            font-family: 'Verdana', sans-serif;
-            color: #2980b9;
-            border-bottom: 2px solid #2980b9;
-            padding-bottom: 5px;
-        }
-
-        p {
-            font-size: 16px;
-            line-height: 1.6;
-            color: #333;
-        }
-
-        .skills-table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 10px;
-        }
-
-        .skills-table th, .skills-table td {
-            border: 1px solid #ddd;
-            padding: 10px;
-            text-align: left;
-        }
-
-        .skills-table th {
-            background-color: #2980b9;
-            color: white;
-            font-family: 'Verdana', sans-serif;
-        }
-
-        .skills-table td {
-            background-color: #ecf0f1;
-        }
-
-        .category-title {
-            background-color: #2c3e50;
-            color: white;
-            font-size: 18px;
-            padding: 8px;
-            text-align: center;
-            border-radius: 5px;
             margin-top: 20px;
         }
     </style>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Nicolás Torres</a>
+        </div>
+    </nav>
 
-    <div class="container">
-        <h1>Nicolás Torres</h1>
-
-        <h2>About Me</h2>
+    <div class="container mt-4">
+        <h1 class="text-center">About Me</h1>
         <p>My name is Nicolás Torres, and I am an Electrical Engineering student at Universidad de los Andes, currently in my sixth and final year.  
         Throughout my studies, I have developed a strong interest in power systems, automation, and renewable energy.  
         In the near future, I see myself working in one of these fields, particularly in companies related to energy generation and distribution, such as Colbún, Enel, AES Chile, Engie, or an innovative startup focused on renewable energy.</p>
 
         <p>Beyond engineering, I consider myself a proactive person, and sports are an essential part of my lifestyle.  
-        I love spending time in nature, especially trekking across Chile, where I can combine my passion for exploration with one of my favorite hobbies, landscape and astrophotography...</p>
+        I love spending time in nature, especially trekking across Chile, where I can combine my passion for exploration with one of my favorite hobbies, landscape and astrophotography.</p>
+    </div>
 
-        <div class="category-title">Data Analysis / Coding</div>
-        <table class="skills-table">
-            <tr>
-                <th>Skill</th>
-                <th>Level</th>
-            </tr>
-            <tr>
-                <td>Excel</td>
-                <td>Advanced</td>
-            </tr>
-            <tr>
-                <td>Python</td>
-                <td>Intermediate</td>
-            </tr>
-            <tr>
-                <td>SQL</td>
-                <td>Intermediate</td>
-            </tr>
-            <tr>
-                <td>Git</td>
-                <td>Intermediate</td>
-            </tr>
-            <tr>
-                <td>JavaScript</td>
-                <td>Basic</td>
-            </tr>
-            <tr>
-                <td>HTML/CSS</td>
-                <td>Basic</td>
-            </tr>
-        </table>
-
-        <div class="category-title">Electrical Engineering</div>
-        <table class="skills-table">
-            <tr>
-                <th>Skill</th>
-                <th>Level</th>
-            </tr>
-            <tr>
-                <td>Power System Analysis</td>
-                <td>Advanced</td>
-            </tr>
-            <tr>
-                <td>DIgSILENT PowerFactory</td>
-                <td>Intermediate</td>
-            </tr>
-            <tr>
-                <td>MATLAB</td>
-                <td>Intermediate</td>
-            </tr>
-        </table>
-
-        <div class="category-title">Languages</div>
-        <table class="skills-table">
-            <tr>
-                <th>Skill</th>
-                <th>Level</th>
-            </tr>
-            <tr>
-                <td>Spanish</td>
-                <td>Native</td>
-            </tr>
-            <tr>
-                <td>English</td>
-                <td>Intermediate</td>
-            </tr>
+    <div class="container mt-4">
+        <h2>Skills</h2>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Skill</th>
+                    <th>Level</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>Python</td><td>Intermediate</td></tr>
+                <tr><td>JavaScript</td><td>Basic</td></tr>
+                <tr><td>Power System Analysis</td><td>Advanced</td></tr>
+                <tr><td>DIgSILENT PowerFactory</td><td>Intermediate</td></tr>
+                <tr><td>MATLAB</td><td>Intermediate</td></tr>
+            </tbody>
         </table>
     </div>
 
+    <div class="container mt-4">
+        <h2>Latest News</h2>
+        <div id="news" class="row"></div>
+    </div>
+
+    <!-- Bootstrap JS and AJAX Script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const apiKey = "319ea3b04ff62e7832b5594464087d74"; 
+            const url = `https://gnews.io/api/v4/top-headlines?category=technology&lang=en&country=us&max=6&apikey=${apiKey}`;
+
+            fetch(url)
+                .then(response => response.json())
+                .then(data => {
+                    const newsContainer = document.getElementById("news");
+
+                    if (!data.articles || data.articles.length === 0) {
+                        newsContainer.innerHTML = "<p>No news available.</p>";
+                        return;
+                    }
+
+                    data.articles.forEach(article => {
+                        const newsItem = document.createElement("div");
+                        newsItem.classList.add("col-md-4");
+                        newsItem.innerHTML = `
+                            <div class="card mb-3">
+                                <img src="${article.image || 'https://via.placeholder.com/300x150'}" class="card-img-top" alt="News Image">
+                                <div class="card-body">
+                                    <h5 class="card-title">${article.title}</h5>
+                                    <p class="card-text">${article.description || 'No description available.'}</p>
+                                    <a href="${article.url}" class="btn btn-primary" target="_blank">Read More</a>
+                                </div>
+                            </div>
+                        `;
+                        newsContainer.appendChild(newsItem);
+                    });
+                })
+                .catch(error => {
+                    console.error("Error fetching news:", error);
+                    document.getElementById("news").innerHTML = "<p>Failed to load news.</p>";
+                });
+        });
+    </script>
 </body>
 </html>
